fix language button positioning fix text in endgame modal

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     </article>
     <article class="endgame__modal endgame__modal--hidden" data-endgame-modal>
       <section class="endgame__modal__content">
-        <h2 class="endgame__modal__text" data-endgame-modal-header>
-          YOU WON!
-        </h2>
+        <h2 class="endgame__modal__text" data-endgame-modal-header></h2>
         <button class="endgame__modal__button" data-endgame-modal-button>PLAY AGAIN!</button>
         <div class="endgame__modal__languageButton" data-endgame-modal-language-button></div>
       </section>
@@ -53,8 +51,7 @@
     <article class="mustCapture__modal mustCapture__modal--hidden" data-capture-modal>
       <section class="mustCapture__modal__content">
         <h2 class="mustCapture__modal__text" data-capture-modal-text>
-          Capture is obligatory! Pieces with possible capture move are marked with blue color 
-        </h2>
+          Capture is obligatory! Pieces with possible capture move are marked with blue color</h2>
         <button class="mustCapture__modal__button" data-capture-modal-button>GOT IT!</button>
         <div class="mustCapture__modal__languageButton" data-capture-modal-language-button></div>
       </section>
