- divide game into many files - code rewriting and cleaning - enable to show board after the game

--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
     <article class="endgame__modal endgame__modal--hidden" data-endgame-modal>
       <section class="endgame__modal__content">
         <h2 class="endgame__modal__text" data-endgame-modal-header></h2>
-        <button class="endgame__modal__button" data-endgame-modal-button>PLAY AGAIN!</button>
+        <div class="endgame__modal__buttons__container" data-endgame-modal-buttons-container>
+          <button class="endgame__modal__button" data-endgame-modal-again-button>PLAY AGAIN!</button>
+          <button class="endgame__modal__button" data-endgame-modal-board-button>SHOW BOARD</button>
+        </div>
         <div class="endgame__modal__languageButton" data-endgame-modal-language-button></div>
       </section>
     </article>
+    <article class="board__modal board__modal--hidden" data-board-modal></article>
     <article class="mustCapture__modal mustCapture__modal--hidden" data-capture-modal>
       <section class="mustCapture__modal__content">
         <h2 class="mustCapture__modal__text" data-capture-modal-text>
